Fix scrollbar on chrome

--- a/public/opium/css/style.css
+++ b/public/opium/css/style.css
@@ -3921,10 +3921,6 @@ h6 {
   width:100%;
 }
 
-::-webkit-scrollbar { 
-    display: none; 
-}
-
 
 /*---------------------------------------------------- */
 
